sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/Bypass_Trigger_Setting__mdt.object-meta.xml
<CustomObject>
    <description>LEM-82: This metadata will be used for bypassing trigger contexts of sObject for Profiles or Custom Permissions or Apex classes.</description>
    <label>Bypass Trigger Setting</label>
    <pluralLabel>Bypass Trigger Settings</pluralLabel>
</CustomObject>