sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/After_Delete__c.field-meta.xml
<CustomField>
    <fullName>After_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-82: Bypass After Delete context of trigger.</description>
    <inlineHelpText>Check to bypass After Delete context of trigger</inlineHelpText>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>