sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/After_Insert__c.field-meta.xml
<CustomField>
    <fullName>After_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-82: Bypass After Insert context of trigger.</description>
    <inlineHelpText>Check to bypass After Insert context of trigger</inlineHelpText>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>