sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/After_Undelete__c.field-meta.xml
<CustomField>
    <fullName>After_Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-82: Bypass After Undelete context of trigger.</description>
    <inlineHelpText>Check to bypass After Undelete context of trigger</inlineHelpText>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>