sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/After_Update__c.field-meta.xml
<CustomField>
    <fullName>After_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-82: Bypass After Update context of trigger.</description>
    <inlineHelpText>Check to bypass After Update context of trigger</inlineHelpText>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>