sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/Before_Delete__c.field-meta.xml
<CustomField>
    <fullName>Before_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-82: Bypass Before Delete context of trigger.</description>
    <inlineHelpText>Check to bypass Before Delete context of trigger</inlineHelpText>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>