sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/Before_Insert__c.field-meta.xml
<CustomField>
    <fullName>Before_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-82: Bypass Before Insert context of trigger.</description>
    <inlineHelpText>Check to bypass Before Insert context of trigger</inlineHelpText>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>