sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Before_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-82: Bypass Before Update context of trigger.</description>
    <inlineHelpText>Check to bypass Before Update context of trigger</inlineHelpText>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>