sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>LEM-82: sObject Name to bypass trigger contexts.</description>
    <inlineHelpText>Enter sObject Name to bypass trigger contexts</inlineHelpText>
    <label>Object Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>