sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Name__c</fullName>
    <description>LEM-82: Name of Profile/Custom Permission/Apex Class to bypass trigger contexts.</description>
    <inlineHelpText>Enter name of Profile/Custom Permission/Apex Class to bypass trigger contexts</inlineHelpText>
    <label>Permission Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>