sfdx-source/force-app/main/default/objects/Bypass_Trigger_Setting__mdt/fields/Permission_Type__c.field-meta.xml
<CustomField>
    <fullName>Permission_Type__c</fullName>
    <description>LEM-82: This indicates type of the entered Permission Name.</description>
    <inlineHelpText>Select type corresponding to the Permission Name</inlineHelpText>
    <label>Permission Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
                <default>true</default>
                <label>Profile</label>
            </value>
            <value>
                <fullName>Custom Permission</fullName>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>